force-app/main/default/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <label>Event</label>
    <nameField><label>Event Name</label><trackHistory>false</trackHistory><type>Text</type></nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>