force-app/main/default/objects/Event__c/fields/Client__c.field-meta.xml
<CustomField><fullName>Client__c</fullName><externalId>false</externalId><label>Client</label><required>false</required><trackTrending>false</trackTrending><type>Lookup</type><referenceTo>Client__c</referenceTo><relationshipLabel>Events</relationshipLabel><relationshipName>Events</relationshipName><deleteConstraint>SetNull</deleteConstraint></CustomField>