force-app/main/default/objects/Event__c/fields/Event_Date__c.field-meta.xml
<CustomField><fullName>Event_Date__c</fullName><externalId>false</externalId><label>Event Date</label><required>false</required><trackTrending>false</trackTrending><type>Date</type></CustomField>