force-app/main/default/objects/Event__c/fields/Event_Type__c.field-meta.xml
<CustomField><fullName>Event_Type__c</fullName><externalId>false</externalId><label>Event Type</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Wedding</fullName><default>false</default><label>Wedding</label></value><value><fullName>Corporate</fullName><default>false</default><label>Corporate</label></value><value><fullName>Birthday</fullName><default>false</default><label>Birthday</label></value><value><fullName>Anniversary</fullName><default>false</default><label>Anniversary</label></value><value><fullName>Festival</fullName><default>false</default><label>Festival</label></value><value><fullName>Concert</fullName><default>false</default><label>Concert</label></value><value><fullName>Other</fullName><default>false</default><label>Other</label></value></valueSetDefinition></valueSet></CustomField>