force-app/main/default/objects/Event__c/fields/Venue__c.field-meta.xml
<CustomField><fullName>Venue__c</fullName><externalId>false</externalId><label>Venue</label><required>false</required><trackTrending>false</trackTrending><type>Lookup</type><referenceTo>Venue__c</referenceTo><relationshipLabel>Events</relationshipLabel><relationshipName>Events</relationshipName><deleteConstraint>SetNull</deleteConstraint></CustomField>